src/style.css
*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

:root {
  --light: white;
  --dark: black;

  --clear-sky: #669ed6;
  --dark-sky: #291798;
  --purple-sky: #584ddd;
  --french-sky: #77B5FE;
  --night-sky: #000000;
  --deep-sky: #00BFFF;
}

@import url('https://fonts.googleapis.com/css2?family=Reddit+Sans:ital,wght@0,200..900;1,200..900&display=swap');

@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');

.reddit-sans-weather {
  font-family: "Reddit Sans", sans-serif;
  font-optical-sizing: auto;
  font-weight: normal;
  font-style: normal;
}

.vt323-regular {
  font-family: "VT323", monospace;
  font-weight: 400;
  font-style: normal;
}


html {
  line-height: normal;
  font-size: 20px;
  font-family: Reddit Sans, Bahnschrift, 'DIN Alternate', 'Franklin Gothic Medium', 'Nimbus Sans Narrow', sans-serif-condensed, sans-serif;
  font-weight: normal;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: normal;
}

img,
picture,
video,
canvas,
svg {
  display: block;
  max-inline-size: 100%;
}

body {
  background-color: var(--french-sky);
  color: var(--light);
  /* background: linear-gradient(var(--purple-sky), var(--purple-sky)); */
}

.primary {
  display: grid;
  grid-template-columns: 33.33% 1fr 33.33%;
  grid-template-rows: min-content min-content 50% min-content 20%;
  align-items: center;
  justify-items: center;

  height: max-content;

  max-width: 700px;
  margin: 24px auto;
  padding: 12px;

  .location {
    grid-row: 1 / 2;
    grid-column: 1 / 3;
    justify-self: start;
    align-self: center;
    margin-bottom: 12px;

    gap: 6px;
    display: flex;
    align-items: center;

    .icon {
      margin-bottom: 2px;
    }
  }

  .day-time {
    grid-row: 1 / 2;
    grid-column: 3 / 4;
    justify-self: end;
    align-self: center;
    margin-right: 8px;
    margin-bottom: 12px;
  }

  .alerts {
    grid-row: 2 / 3;
    grid-column: 1 / 4;
    width: 100%;
    margin-bottom: 4px;
    display: flex;
    display: none;
    align-items: center;

    .icon {
      margin-right: 12px;
    }

    p {
      margin-right: 12px;
    }
  }

  .current-temp {
    grid-row: 3 / 4;
    grid-column: 1 / 2;
    position: relative;

    font-size: 7rem;

    .degree-symbol {
      font-size: 2rem;
      vertical-align: text-top;
      line-height: 2.8;
      position: absolute;
    }
  }

  .conditions {
    grid-row: 3 / 4;
    grid-column: 2 / 3;
    width: fit-content;
    padding: 12px;
    place-self: center;

    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 4px;



    .precip {
      border-top: 1px solid rgba(255, 255, 255, 0.4);
      border-bottom: 1px solid rgba(255, 255, 255, 0.4);
      padding: 4px 0;
    }

    div {
      display: flex;
      align-items: center;
      justify-content: start;

      .icon {
        margin-right: 14px;
      }

      p {
        font-size: 1.2rem;
      }
    }
  }

  .visual {
    grid-row: 3 / 4;
    grid-column: 3 / 4;
    place-self: center start;
    width: 90%;
    height: 90%;
    background-image: url("./weather-icons/clear-day.svg");
    background-position: center;
    background-repeat: no-repeat;
    filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.7));
  }

  .forecast-temps {
    display: flex;
    justify-content: space-around;
    font-size: 0.8rem;
    grid-row: 4 / 5;
    grid-column: 1 / 4;
    width: 100%;
  }

  .temp-chart {
    position: relative;
    grid-row: 5 / 6;
    grid-column: 1 / 4;
    width: 100%;
    height: 100%;
    clip-path: inset(0 0);
    border-left: 1px solid rgba(255, 255, 255, 0.4);
    border-right: 1px solid rgba(255, 255, 255, 0.2);
  }

  .forecast-times {
    display: flex;
    justify-content: space-around;
    font-size: 0.9rem;
    grid-row: 6 / 7;
    grid-column: 1 / 4;
    width: 100%;
  }
}

h3 {
  font-size: 1.8rem;
}


.card {
  border-radius: 25px;
  border: 1px solid rgba(255, 255, 255, 0.4);
  background-color: var(--clear-sky);
  /* background: linear-gradient(rgba(255, 255, 255, 0.2), var(--clear-sky)); */
  /* background: linear-gradient(rgba(173, 173, 173, 0.2) 50%, rgba(255, 255, 255, 0.6) 80%); */
  background-image: linear-gradient(rgba(255, 255, 255, 0.2) 50%, rgba(255, 255, 255, 0.7) 100%), url("./images/texture.png");
  background-blend-mode: overlay;
  text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.8);
  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
}

.alerts {
  border: 1px solid rgba(212, 0, 0, 0.7);
  background-color: rgba(255, 34, 34, 0.6);
  border-radius: 25px;
  padding: 4px 12px;
}


.icon {
  filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.8));
}

li {
  list-style-type: none;
}

#forecast {
  position: absolute;
  top: -20px;
  display: flex;
  height: 200%;
  width: 100%;
  /* background-color: white; */
  background: linear-gradient(rgba(255, 255, 255, 0) 20%, white);
  /* background: linear-gradient(rgba(255, 255, 255, 0) 20%, white 60%); */
  /* background: linear-gradient(rgba(255, 255, 255, 0) 20%, white 60%); */
  /* background: linear-gradient(rgba(255, 255, 255, 0) 20%, #000000 80%); */
}


#forecast>li {
  background-color: #f5b952;
  /* background: linear-gradient(#f5b952 60%, var(--clear-sky) 70%); */
  width: 100%;
  clip-path: polygon(0 100%,
      0 calc(100% - var(--previous-value)),
      100% calc(100% - var(--value)),
      100% 100%);
  stroke: rgb(153 51 102 / 1);
}

